email properties added

--- a/Askanything-backend/src/main/resources/application.properties
+++ b/Askanything-backend/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
-spring.mail.host=smtp.mailtrap.io
-spring.mail.port=25
-spring.mail.username=mailtrap_username
-spring.mail.password=mailtrap_password
 spring.mail.protocol=smtp
-
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=email
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
