--- a/AskAnything-frontend/angular.json
+++ b/AskAnything-frontend/angular.json
@@ -29,6 +29,7 @@
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
+              "./node_modules/hammerjs/hammer.js",
               "./node_modules/materialize-css/dist/js/materialize.js"
             ]
           },
